minor redesign matters and various conventions: - renamed RoutesBundle to RouteSharedInfo - moved partially shared interface (between IRouteSharedInfo and IRouteAlternative) to IRouteCustomizableInfo - the alternatives of a route can only make their customizations more restrictive than the base information from RouteSharedInfo - the model used for finding the routes ignores the dates when a certain transport is unavailable (among the previous days of current month) - updated the tests - updated documentation to mention that the timetables might contain times > 24:00

--- a/TripPlanner.vcxproj
+++ b/TripPlanner.vcxproj
@@ -110,8 +110,9 @@
     <ClInclude Include="src\resultsBase.h" />
     <ClInclude Include="src\routeAlternative.h" />
     <ClInclude Include="src\routeAlternativeBase.h" />
-    <ClInclude Include="src\routesBundle.h" />
-    <ClInclude Include="src\routesBundleBase.h" />
+    <ClInclude Include="src\routeCustomizableInfoBase.h" />
+    <ClInclude Include="src\routeSharedInfo.h" />
+    <ClInclude Include="src\routeSharedInfoBase.h" />
     <ClInclude Include="src\transpModes.h" />
     <ClInclude Include="src\util.h" />
     <ClInclude Include="src\variant.h" />
@@ -133,7 +134,7 @@
     <ClCompile Include="src\pricing.cpp" />
     <ClCompile Include="src\results.cpp" />
     <ClCompile Include="src\routeAlternative.cpp" />
-    <ClCompile Include="src\routesBundle.cpp" />
+    <ClCompile Include="src\routeSharedInfo.cpp" />
     <ClCompile Include="src\transpModes.cpp" />
     <ClCompile Include="src\util.cpp" />
     <ClCompile Include="src\variant.cpp" />
