Feat: added GPS, aliases and description for places, plus other rules for the expected input data (better convergence towards optimal trip plans); accepting UTF-8 place names and descriptions
Adapt: g++ compilable; clang++ had some issues during building several required boost libraries (GNU compilers have native support for UTF-8 console operations - simpler than msvc mechanisms)

Feat: putting the users on hold while the admin updates the database to ensure the booked tickets and the search results are correct

--- a/UnitTests/UnitTests.vcxproj
+++ b/UnitTests/UnitTests.vcxproj
@@ -58,6 +58,7 @@
       <AdditionalIncludeDirectories>$(SolutionDir)src;$(BoostDir);$(VCInstallDir)UnitTest\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>UNIT_TESTING;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
+      <DisableSpecificWarnings>4068;4503</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -75,6 +76,7 @@
       <AdditionalIncludeDirectories>$(SolutionDir)src;$(BoostDir);$(VCInstallDir)UnitTest\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>UNIT_TESTING;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
+      <DisableSpecificWarnings>4068;4503</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -108,6 +110,7 @@
     <ClCompile Include="testCustomDateTimeProcessor.cpp" />
     <ClCompile Include="testDbSource.cpp" />
     <ClCompile Include="testJsonSource.cpp" />
+    <ClCompile Include="testPlace.cpp" />
     <ClCompile Include="testPlanner.cpp" />
     <ClCompile Include="testPricing.cpp" />
     <ClCompile Include="testUtil.cpp" />
