doc: Updated ReadMe.md

--- a/TripPlanner.vcxproj
+++ b/TripPlanner.vcxproj
@@ -91,6 +91,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <None Include="input.json" />
+    <None Include="Makefile" />
+    <None Include="ReadMe.md" />
     <None Include="TripPlanner.licenseheader" />
   </ItemGroup>
   <ItemGroup>
@@ -141,6 +144,9 @@
     <ClCompile Include="src\util.cpp" />
     <ClCompile Include="src\variant.cpp" />
     <ClCompile Include="src\variants.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="agpl-3.0.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
